# humaneval-js

./: .gitignore  humaneval-js.sh  humaneval-py.sh  package.json  pyproject.toml
HumanEval/: 0.py  1.py  10.py  100.py  101.py  102.py  103.py  104.py  105.py  106.py  107.py  108.py  109.py  11.py  110.py  111.py  112.py  113.py  114.py  115.py  116.py  117.py  118.py  119.py  12.py  120.py  121.py  122.py  123.py  124.py  125.py  126.py  127.py  128.py  129.py  13.py  130.py  131.py  132.py  133.py  (+124 more)
HumanEvalJs/: 0.js  1.js  10.js  100.js  101.js  102.js  103.js  104.js  105.js  106.js  107.js  108.js  109.js  11.js  110.js  111.js  112.js  113.js  114.js  115.js  116.js  117.js  118.js  119.js  12.js  120.js  121.js  122.js  123.js  124.js  125.js  126.js  127.js  128.js  129.js  13.js  130.js  131.js  132.js  133.js  (+124 more)
notebooks/: export.ipynb  format.ipynb  transpile.ipynb
